5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1807_2569.log
== TEST (2019-06-10 00:33:18) 
-- CODE:
from numpy import *
num=array(eval(input('digite:   ')))
media=sum(num[i]/size(num))
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 00:45:32) 
-- CODE:

from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i] # Divide a soma pelo numero de # elementos do vetor, para determinar a media 
media = soma / size(notas) print(round(media, 2))

-- ERROR:
File "XXXX", line 7
    media = soma / size(notas) print(round(media, 2))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 00:45:45) 
-- CODE:

from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i] # Divide a soma pelo numero de # elementos do vetor, para determinar a media 
media = soma / size(notas) 
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * # Atribui valores a um vetor 'v' 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 00:46:38) 
-- CODE:

from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i] # Divide a soma pelo numero de # elementos do vetor, para determinar a media 
media = soma / size(notas) 
print(round(media, 2))
for i in notas:
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 00:46:50) 
-- CODE:

from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i] # Divide a soma pelo numero de # elementos do vetor, para determinar a media 
media = soma / size(notas) 
print(round(media, 2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * # Atribui valores a um vetor 'v' 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:52:53) 
-- CODE:
from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i]  
media = soma / size(notas) 
print(round(media, 2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * # Atribui valores a um vetor 'v' 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 09:52:53) 
-- CODE:
from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i]  
media = soma / size(notas) 
print(round(media, 2))

	
-- EXECUTION TIME:
0.991639
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
57.4
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
Informe as notas: 27.26
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
Informe as notas: 1.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:10:26) 
-- CODE:
from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i]  
media = soma / size(notas) 
print(round(media, 2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * # Atribui valores a um vetor 'v' 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:15:58) 
-- CODE:
from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i]  
media = soma / size(notas) 
print(round(media, 2))
x=0
for i in notas:
	x=x+ (i - media)**2

x=x/(size(notas)-1)
x=x**0.5
print(round(x,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * # Atribui valores a um vetor 'v' 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:16:28) 
-- CODE:
from numpy import * # Atribui valores a um vetor 'v' 
notas = array(eval(input("Informe as notas: "))) # Soma dos valores do vetor. Comeca em ZERO. 
soma = 0 # Calcula a soma 
for i in range(size(notas)):
	soma = soma + notas[i]  
media = soma / size(notas) 
#print(round(media, 2))#
x=0
for i in notas:
	x=x+ (i - media)**2

x=x/(size(notas)-1)
x=x**0.5
print(round(x,3))
	
-- EXECUTION TIME:
0.904482
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
